--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT=3000
 
 DB_URI=postgresql://josephvasquezunefa:IeG3zSDgZ5vs@ep-rapid-brook-69716229.us-east-2.aws.neon.tech/petclinic?sslmode=require
+
+NODE_ENV=development
+
+SECRET_JWT_SEED=SG9sYU11bmRv
+JWT_EXPIRE_IN=2h
