--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
